fix color contrast of text and tabindex

--- a/metager/resources/less/metager/parts/sidebar.less
+++ b/metager/resources/less/metager/parts/sidebar.less
@@ -17,14 +17,14 @@
   border-left: none;
 
   .sidebar-logo {
-    > span {
+    >span {
       display: block;
       margin: 20px;
       padding: 10px 0;
       text-align: center;
       border-radius: 10px;
 
-      > img {
+      >img {
         width: 10em;
       }
     }
@@ -35,33 +35,33 @@
     list-style: none;
     margin-left: -5px;
 
-    & > li {
+    &>li {
       width: 100%;
 
       &:hover {
         background-color: @sidebar-list-hover-color;
       }
 
-      & > label,
-      & > a {
+      &>label,
+      &>a {
         padding: 10px 0px;
 
         &:focus {
           outline: none;
         }
 
-        & > i.fa {
+        &>i.fa {
           width: 30px;
           text-align: center;
           margin-right: 7px;
         }
 
-        & > img {
+        &>img {
           filter: invert(@icon-color);
         }
       }
 
-      & > label {
+      &>label {
         font-size: 1.1em;
         font-weight: normal;
         text-decoration: none;
@@ -89,7 +89,7 @@
     overflow: hidden;
     transition: 0.5s ease;
 
-    & > li > a {
+    &>li>a {
       display: block;
       font-size: 0.9em;
       padding: 6px 20px;
@@ -151,13 +151,13 @@
     display: none;
 
     &:checked {
-      & ~ .metager-dropdown-content {
+      &~.metager-dropdown-content {
         display: initial;
         max-height: 1000px;
         padding: 0px 0px 0px 0px;
       }
 
-      & ~ label > .caret {
+      &~label>.caret {
         border-top: 0 solid;
         border-bottom: 4px solid;
         transition: border-top 0.1s, border-bottom 0.1s 0.1s;
@@ -165,13 +165,13 @@
     }
 
     &:not(:checked) {
-      & ~ .metager-dropdown-content {
+      &~.metager-dropdown-content {
         padding: 0px 0;
       }
     }
   }
 
-  input#nav0:checked ~ & {
+  input#nav0:checked~& {
     border-left: 1px solid LightGray;
   }
 
@@ -209,9 +209,7 @@
     @sidebar-opener-mobile-magnification: 10px;
     margin: @sidebar-opener-mobile-magnification;
     top: (@sidebar-opener-position-top - @sidebar-opener-mobile-magnification);
-    right: (
-      @sidebar-opener-position-right - @sidebar-opener-mobile-magnification
-    );
+    right: (@sidebar-opener-position-right - @sidebar-opener-mobile-magnification );
   }
 
   .sidebar-opener-placeholder {
@@ -249,7 +247,12 @@
 
 /* Sidebar toggle checkbox */
 #sidebarToggle {
-  display: none;
+  position: absolute;
+  right: 300%;
+
+  &:focus {
+    left: 0;
+  }
 }
 
 .sidebar-opener.close {
@@ -257,15 +260,15 @@
 }
 
 #sidebarToggle:checked {
-  & ~ .sidebar {
+  &~.sidebar {
     right: 0px;
   }
 
-  & ~ .sidebar-opener {
+  &~.sidebar-opener {
     display: none;
   }
 
-  & ~ .sidebar-opener.close {
+  &~.sidebar-opener.close {
     display: initial;
   }
 }
@@ -340,4 +343,16 @@
   margin-top: -4px;
   margin-left: 7px;
   margin-right: 8px;
+}
+
+#skip-to-nav-toggle {
+  position: absolute;
+  top: 0;
+  left: -100%;
+  color: @link-color;
+  font-size: inherit;
+
+  &:focus {
+    left: 0;
+  }
 }
